
[[changelog]]
== Changelog


[[release-next]]
[float]
=== Unreleased
https://github.com/elastic/apm-agent-python/compare/v2.0.1\...master[Check the HEAD diff]

 * made skipping of initial `elasticapm` frames for span stack traces more generic ({pull}167[#167])
 * added `context.process.ppid` field (supported in apm-server 6.3+) ({pull}168[#168])

[[release-2.0.1]]
[float]
=== v2.0.1
https://github.com/elastic/apm-agent-python/compare/v2.0.0\...v2.0.1[Check the diff]

 * fixed compatibility issue with aiohttp 3.0 ({pull}157[#157])
 * Added truncation for fields that have a `maxLength` in the JSON Schema ({pull}159[#159])


[[release-2.0.0]]
[float]
=== v2.0.0
https://github.com/elastic/apm-agent-python/compare/v1.0.0\...v2.0.0[Check the diff]

 * moved the library-frame detection from a processor to the stacktrace collection ({pull}113[#113]).
 * added settings to enable/disable source code collection and local variables collection
   for errors and transactions ({pull}117[#117])
 * added `service.environment` to provide an environment name (e.g. "production", "staging") ({pull}123[#123])
 * added `transaction.id` to errors to better correlate errors with transactions ({pull}122[#122])
 * added `transaction_sample_rate` to define a rate with which transactions are sampled ({pull}116[#116])
 * added `error.handled` to indicate if an exception was handled or not ({pull}124[#124]).
 * added `transaction_max_spans` setting to limit the amount of spans that are recorded per transaction ({pull}127[#127])
 * added configuration options to limit captured local variables to a certain length ({pull}130[#130])
 * added options for configuring the amount of context lines that are captured with each frame ({pull}136[#136])
 * added support for tracing queries formatted as http://initd.org/psycopg/docs/sql.html[`psycopg2.sql.SQL`] objects ({pull}148[#148])
 * switched to `time.perf_counter` as timing function on Python 3 ({pull}138[#138])