@@ -368,6 +368,24 @@ Limits the amount of spans that are recorded per transaction.
 This is helpful in cases where a transaction creates a very high amount of spans (e.g. thousands of SQL queries).
 Setting an upper limit will prevent overloading the agent and the APM server with too much work for such edge cases.
 
+[float]
+[[config-span-frames-min-duration-ms]]
+==== `span_frames_min_duration_ms`
+
+|============
+| Environment                               | Django/Flask                  | Default
+| `ELASTIC_APM_SPAN_FRAMES_MIN_DURATION_MS` | `SPAN_FRAMES_MIN_DURATION_MS` | `-1`
+|============
+
+In its default settings, the APM agent will collect a stack trace with every recorded span.
+While this is very helpful to find the exact place in your code that causes the span,
+collecting this stack trace does have some overhead.
+
+With the default setting, `-1`, stack traces will be collected for all spans.
+Setting it to a positive value, e.g. `5`, will limit stack trace collection to spans
+with durations equal or longer than the given value in milliseconds, e.g. 5 milliseconds.
+
+To disable stack trace collection for spans completely, set the value to 0.
 
 [float]
 [[config-max-queue-size]]
