@@ -18,6 +18,9 @@ class TempStoreClient(DjangoClient):
 @pytest.fixture()
 def django_elasticapm_client(request):
     client_config = getattr(request, 'param', {})
+    client_config.setdefault('service_name', 'app')
+    client_config.setdefault('secret_token', 'secret')
+    client_config.setdefault('span_frames_min_duration_ms', -1)
     app = apps.get_app_config('elasticapm.contrib.django')
     old_client = app.client
     client = TempStoreClient(**client_config)
@@ -41,6 +44,7 @@ def django_sending_elasticapm_client(request, validating_httpserver):
     client_config.setdefault('service_name', 'app')
     client_config.setdefault('secret_token', 'secret')
     client_config.setdefault('transport_class', 'elasticapm.transport.http.Transport')
+    client_config.setdefault('span_frames_min_duration_ms', -1)
     app = apps.get_app_config('elasticapm.contrib.django')
     old_client = app.client
     client = DjangoClient(**client_config)
